# Ml_homework

./: .gitignore  README.md
.ipynb_checkpoints/: README-checkpoint.md
Depth_Vision_and_Graphics/: .gitignore
Depth_Vision_and_Graphics/Bird_classification/: image_classification.ipynb
Depth_Vision_and_Graphics/Deconvolution/: deconvolution.py
Depth_Vision_and_Graphics/Demosaicing/: bayer.py  calibration.json
Depth_Vision_and_Graphics/Face_Points/: detection.py  face_predict.ipynb  pyproject.toml
Depth_Vision_and_Graphics/Image Compression/: image_compression.py
Depth_Vision_and_Graphics/Interactive_Segmentation/: solution.py
Depth_Vision_and_Graphics/Interactive_Segmentation/utils/: datasets.py
Depth_Vision_and_Graphics/NN_Implementation/: common.py  solution.py
Depth_Vision_and_Graphics/NN_Quantization/: solution.py
Depth_Vision_and_Graphics/Prokudin-Gorsky/: align.py
Depth_Vision_and_Graphics/Rare_Traffic_Signs/: rare_traffic_sign_solution.py
Depth_Vision_and_Graphics/Tracking/solution_template/: cross_correlation.py  detection.py  metrics.py  tracker.py
Depth_Vision_and_Graphics/Vehicle_Detector/: detection_and_metrics.py
